configured app routing

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="collapse navbar-collapse"> <!-- may change? -->
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Ash</a></li>
+                <li routerLinkActive="active"><a routerLink="/ash">Ash</a></li>
                 <li class="dropdown">
                     <a 
                         class="dropdown-toggle" 
@@ -17,8 +17,8 @@
                         <li><a href="#">Riku</a></li>
                     </ul>
                 </li>
-                <li><a href="#">More Pets</a></li>
                 <li><a href="#">In Memoriam</a></li>
+                <li><a href="#">More Pets</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
