--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,22 @@
 <app-header></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
-home page, words
+    <br>    
+    <div class="col-md-7">
+      <img src="https://i.imgur.com/paJj5Gxm.jpg" class="img-rounded"><br><br>
+      Hello and welcome to <i>Cute Pets!</i> My name is Shelby and I'm a pet sitter and web developer with a passion for animals. Click the links above to learn about my cute pets and see other pets too! 
     </div>
+    <!-- <div class="col-med-4">
+      <img src="https://i.imgur.com/oKdFpAcm.jpg" class="img-rounded">
+    </div> -->
+  </div>    
+  
+  <div class="row">
+    <div class="col-md-4">
+      <br>
+        <!-- Hello and welcome to <i>Cute Pets!</i> My name is Shelby and I'm a pet sitter and web developer with a passion for animals. Click the links above to learn about my cute pets and see other pets too!  -->
+      </div>
   </div>
+
+
 </div>
