--- a/src/app/more-pets/more-pets.component.html
+++ b/src/app/more-pets/more-pets.component.html
@@ -1,1 +1,15 @@
-<p>more-pets works!</p>
+<div class="container-fluid">
+
+    <div class="row">
+
+        <div class="col-md-6">
+            call fetchDoggoPic function
+        </div>
+
+        <div class="col-md-6">
+            call fetchKittyPic function
+        </div>
+
+    </div>
+    
+</div>
