--- a/src/app/ash/ash.component.html
+++ b/src/app/ash/ash.component.html
@@ -1,1 +1,11 @@
-<p>ash works!</p>
+<div class="container-fluid">
+    <div class="row">
+      <br>    
+      <div class="col-md-7">
+        <p>ash works!</p>
+      </div>
+      <div class="col-med-4">
+        empty column :)
+      </div> 
+    </div> 
+</div>
