--- a/src/app/beachy/beachy.component.html
+++ b/src/app/beachy/beachy.component.html
@@ -1,1 +1,8 @@
-<p>beachy works!</p>
+<div class="container-fluid">
+    <div class="row">
+      <br>    
+      <div class="col-md-7">
+        <p>beachy works!</p>
+      </div>
+    </div> 
+</div>
