--- a/src/app/more-pets/more-pets.component.html
+++ b/src/app/more-pets/more-pets.component.html
@@ -1,5 +1,4 @@
 <div class="container-fluid">
-
     <div class="row">
 
         <div class="col-md-6">
@@ -13,3 +12,12 @@
     </div>
     
 </div>
+
+<!-- <div class="container">
+    <div class="row">
+      <br>    
+      <div class="col-md-7">
+        <p>beachy works!</p>
+      </div>
+    </div> 
+</div> -->
