added pictures to html components and created fetching services

--- a/src/app/ash/ash.component.html
+++ b/src/app/ash/ash.component.html
@@ -1,11 +1,9 @@
 <div class="container-fluid">
-    <div class="row">
-      <br>    
+    <div class="row">   
       <div class="col-md-7">
-        <p>ash works!</p>
+        <img 
+            src="https://i.imgur.com/8W9bckXl.jpg" 
+            class="img-rounded img-responsive">
       </div>
-      <div class="col-med-4">
-        empty column :)
-      </div> 
     </div> 
 </div>
