--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
                 <li routerLinkActive="active"><a routerLink="/ash">Ash</a></li>
                 <li class="dropdown" appDropdown>
                     <a style="cursor: pointer;"
-                        class="btn dropdown-toggle" 
+                        class="dropdown-toggle" 
                         role="button"
                     >Kitties <span class="caret"></span></a>
                     <ul class="dropdown-menu">
