--- a/src/app/beachy/beachy.component.html
+++ b/src/app/beachy/beachy.component.html
@@ -1,8 +1,9 @@
 <div class="container-fluid">
-    <div class="row">
-      <br>    
+    <div class="row">   
       <div class="col-md-7">
-        <p>beachy works!</p>
+        <img 
+            src="https://i.imgur.com/z46Cz4Ml.jpg" 
+            class="img-rounded img-responsive">
       </div>
     </div> 
 </div>
