--- a/src/app/in-memoriam/in-memoriam.component.html
+++ b/src/app/in-memoriam/in-memoriam.component.html
@@ -1,8 +1,9 @@
 <div class="container-fluid">
-    <div class="row">
-      <br>    
+    <div class="row">   
       <div class="col-md-7">
-        <p>in-memoriam works!</p>
+        <img 
+            src="" 
+            class="img-rounded img-responsive">
       </div>
     </div> 
 </div>
