updated pet components and styling

--- a/src/app/ash/ash.component.html
+++ b/src/app/ash/ash.component.html
@@ -5,5 +5,13 @@
             src="https://i.imgur.com/8W9bckXl.jpg" 
             class="img-rounded img-responsive">
       </div>
+      <div class="col-md-7"><h3>Ash</h3></div>
+      <div class="col-md-7">
+        {{ ashInfo.name | titlecase }} "Gotta Catch 'em All" - Ash <br>
+        {{ ashInfo.nicknames | titlecase }} Horsey, Beast, Bean <br>
+        {{ ashInfo.age | titlecase }} 3.5 years old <br>
+        {{ ashInfo.breed | titlecase }} Australian shepherd <br>
+        {{ ashInfo.favs | titlecase }} Belly rubs, meeting people and dogs, adventures, treats, walks, doggie daycare, people food, socks <br>
+      </div>
     </div> 
 </div>
