--- a/src/app/riku/riku.component.html
+++ b/src/app/riku/riku.component.html
@@ -5,5 +5,13 @@
             src="https://i.imgur.com/2cWOvu4l.jpg" 
             class="img-rounded img-responsive">
       </div>
+      <div class="col-md-7"><h3>Riku</h3></div>
+      <div class="col-md-7">
+        {{ rikuInfo.name | titlecase }} ... <br>
+        {{ rikuInfo.nicknames | titlecase }} ... <br>
+        {{ rikuInfo.age | titlecase }} ... <br>
+        {{ rikuInfo.gender | titlecase }} ... <br>
+        {{ rikuInfo.favs | titlecase }} ... <br>
+      </div>
     </div> 
 </div>
