--- a/src/app/beachy/beachy.component.html
+++ b/src/app/beachy/beachy.component.html
@@ -5,5 +5,13 @@
             src="https://i.imgur.com/z46Cz4Ml.jpg" 
             class="img-rounded img-responsive">
       </div>
+      <div class="col-md-7"><h3>Beachy</h3></div>
+      <div class="col-md-7">
+        {{ beachyInfo.name | titlecase }} ... <br>
+        {{ beachyInfo.nicknames | titlecase }} ... <br>
+        {{ beachyInfo.age | titlecase }} ... <br>
+        {{ beachyInfo.gender | titlecase }} ... <br>
+        {{ beachyInfo.favs | titlecase }} ... <br>
+      </div>
     </div> 
 </div>
