--- a/src/app/shay/shay.component.html
+++ b/src/app/shay/shay.component.html
@@ -5,5 +5,14 @@
             src="https://i.imgur.com/z5Hs82al.jpg" 
             class="img-rounded img-responsive">
       </div>
+      <div class="col-md-7"><h3>Shay</h3></div>
+      <div class="col-md-7"><i>"Though she be but little, she is fierce!" - Shakespeare</i></div><br>
+      <div class="col-md-7">
+        {{ shayInfo.name | titlecase }} ... <br>
+        {{ shayInfo.nicknames | titlecase }} ... <br>
+        {{ shayInfo.age | titlecase }} ... <br>
+        {{ shayInfo.gender | titlecase }} ... <br>
+        {{ shayInfo.favs | titlecase }} Men, butter, shrimp, being warm, slow blinks/eye kisses (Google it), watching the toilet flush, hanging out outside in her stroller, neck scratches, chasing shadows, grumbling <br>
+      </div>
     </div> 
 </div>
