updated pet components

--- a/src/app/beachy/beachy.component.html
+++ b/src/app/beachy/beachy.component.html
@@ -5,13 +5,14 @@
             src="https://i.imgur.com/z46Cz4Ml.jpg" 
             class="img-rounded img-responsive">
       </div>
-      <div class="col-md-7"><h3>Beachy</h3></div>
+      <div class="col-md-7"><h3>Beachy</h3></div><br>
       <div class="col-md-7">
-        {{ beachyInfo.name | titlecase }} ... <br>
-        {{ beachyInfo.nicknames | titlecase }} ... <br>
-        {{ beachyInfo.age | titlecase }} ... <br>
-        {{ beachyInfo.gender | titlecase }} ... <br>
-        {{ beachyInfo.favs | titlecase }} ... <br>
+        {{ beachyInfo.name | titlecase }} Bechmar AKA Beachy <br><br>
+        {{ beachyInfo.nicknames | titlecase }} Beachball, Beachbod, "Ugh" <br><br>
+        {{ beachyInfo.age | titlecase }} 6 years old <br><br>
+        {{ beachyInfo.gender | titlecase }} Male <br><br>
+        {{ beachyInfo.favs | titlecase }} Attention, pawing at stuff, giving love bites, being obnoxious, being a brat, not taking "no" for an answer, laying on laps, hanging out with Riku, chewing on the spider plant, being next to you at all times, getting in your lap whether you want him to or not <br><br>
+        {{ beachyInfo.facts | titlecase }} He used to be overweight, but he got into shape by playing with Ash. He is an excellent cat sibling to Shay and Riku. <br><br>
       </div>
     </div> 
 </div>
