--- a/src/app/riku/riku.component.html
+++ b/src/app/riku/riku.component.html
@@ -5,13 +5,14 @@
             src="https://i.imgur.com/2cWOvu4l.jpg" 
             class="img-rounded img-responsive">
       </div>
-      <div class="col-md-7"><h3>Riku</h3></div>
+      <div class="col-md-7"><h3>Riku</h3></div><br>
       <div class="col-md-7">
-        {{ rikuInfo.name | titlecase }} ... <br>
-        {{ rikuInfo.nicknames | titlecase }} ... <br>
-        {{ rikuInfo.age | titlecase }} ... <br>
-        {{ rikuInfo.gender | titlecase }} ... <br>
-        {{ rikuInfo.favs | titlecase }} ... <br>
+        {{ rikuInfo.name | titlecase }} Riku <br><br>
+        {{ rikuInfo.nicknames | titlecase }} Monkey, Baby, Monkey Baby, Booger Baby, Booger Monster, Sweet Baby Riku <br><br>
+        {{ rikuInfo.age | titlecase }} 5 years old <br><br>
+        {{ rikuInfo.gender | titlecase }} Male <br><br>
+        {{ rikuInfo.favs | titlecase }} His mommy ("mams"), talking to his mams, sleeping face to face with his mams, snuggling his mams, holding hands with his mams, being mean to Shay, feuding with the squirrels in the yard, watching squirrels and birds outside in his stroller, being cute, manipulating you with cuteness, eating anything, being devious <br><br>
+        {{ rikuInfo.facts | titlecase }} I found him, sick and starving, in someone's yard in Independence, MO when he was 12 weeks old. He's basically Cartman from South Park. He is mostly white, but has a gray tail. He's forever a baby.<br>
       </div>
     </div> 
 </div>
