--- a/src/app/shay/shay.component.html
+++ b/src/app/shay/shay.component.html
@@ -5,14 +5,15 @@
             src="https://i.imgur.com/z5Hs82al.jpg" 
             class="img-rounded img-responsive">
       </div>
-      <div class="col-md-7"><h3>Shay</h3></div>
+      <div class="col-md-7"><h3>Shay</h3></div><br>
       <div class="col-md-7"><i>"Though she be but little, she is fierce!" - Shakespeare</i></div><br>
       <div class="col-md-7">
-        {{ shayInfo.name | titlecase }} Shaela AKA Shay <br>
-        {{ shayInfo.nicknames | titlecase }} Little Bitty, Honeybun, Sweetie Bear, My Bb, Big Eyes, Chonky Bb <br>
-        {{ shayInfo.age | titlecase }} 9 years old <br>
-        {{ shayInfo.gender | titlecase }} Female <br>
-        {{ shayInfo.favs | titlecase }} Men, butter, shrimp, being warm, slow blinks/eye kisses (Google it), watching the toilet flush, hanging out and napping outside in her stroller, neck scratches, chasing shadows, grumbling <br>
+        {{ shayInfo.name | titlecase }} Shaela AKA Shay <br><br>
+        {{ shayInfo.nicknames | titlecase }} Little Bitty, Honeybun, Sweetie Bear, My Bb, Big Eyes, Chonky Bb <br><br>
+        {{ shayInfo.age | titlecase }} 8 years old <br><br>
+        {{ shayInfo.gender | titlecase }} Female <br><br>
+        {{ shayInfo.favs | titlecase }} Men, butter, shrimp, being warm, slow blinks/eye kisses (Google it), watching the toilet flush, hanging out and napping outside in her stroller, neck scratches, chasing shadows, flirting, grumbling <br><br>
+        {{ shayInfo.facts | titlecase }} Shay is magical. Her face is mostly eyes. She often makes a really cute noise called a trill. <br><br>
       </div>
     </div> 
 </div>
