--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-7">
-        <img src="https://i.imgur.com/paJj5Gxm.jpg" class="img-rounded img-responsive"><br><br>
-        <p>Hello and welcome to <i>Cute Pets!</i> My name is Shelby and I'm a pet sitter and web developer with a passion for animals. Click the links above to learn about my cute pets and see other pets too!</p> 
+        <img src="https://i.imgur.com/paJj5Gxm.jpg" class="img-rounded img-responsive"><br>
+        <h3>Welcome to <i>Cute Pets!</i></h3><br> 
+        <p>My name is Shelby and I'm a pet sitter and web developer with a passion for animals. Click the links above to learn about my cute pets and see other pets too!</p> 
       </div>
       <!-- <div class="col-med-4">
         <img src="https://i.imgur.com/oKdFpAcm.jpg" class="img-rounded">
