updated components, form, and doggo service

--- a/src/app/in-memoriam/in-memoriam.component.html
+++ b/src/app/in-memoriam/in-memoriam.component.html
@@ -1,9 +1,30 @@
 <div class="container-fluid">
     <div class="row">   
+
       <div class="col-md-7">
         <img 
-            src="" 
+            src="https://i.imgur.com/huPWpttl.jpg" 
             class="img-rounded img-responsive">
       </div>
+      <div class="col-md-7">
+        <h3>Tracee Viggo Strider - "Tater"</h3><br>
+        <i>October 26th, 2001 - January 4th, 2021</i></div><br>
+      <div class="col-md-7">
+        <p>I remember the day I met you. I was 10 years old. My mom and I had gone to the Petsmart in Bridgeton for tortoise food. 
+        This was still the old building, where the empty Lowes is now, laid out just like the St Charles Petsmart. The differences are minor, but I like to remember the details, 
+        and when I go to the Petsmart in St Charles, it's like traveling back in time. <br>
+        There were adoptable kittens near the adoption center. We decided to look. You were in a large cage, like for small animals, with other kittens. 
+        I saw you and instantly I felt this electricity in my chest that I'd never felt before, and I've only felt 2 other times since. 
+        I don't know if that feeling was God, or an angel, or the universe, or some kind of psychic intuition, but I knew in that moment that you were meant to be my cat. I just knew.<br> 
+        And I was right. At first my mom thought the calico kitten sharing the cage with you was a better choice, but after I insisted, she saw how cute you were. I was only 10, 
+        but you truly were the cutest thing I'd ever seen, and I was already in love with you. You just had this magical adorableness that I can't even describe! You were perfect.<br>
+        You were scheduled for a spay, so you weren't technically up for adoption, and that may have been one of the stars that aligned to bring you into our family. We applied, and you were on hold. 
+        While you recovered from your surgery for a week, I used that time to convince my dad to let me adopt you. I offered to pay your adoption fee with my own allowance, and I named you after one of my dad's 
+        mountain bikes, a Tracer - hence your name, "Tracee". We were also really into the Lord of the Ring movies as a family, so that's where 
+        the rest of your name came from - Viggo Mortensen and his character Strider. You were already so unique and special. <br>
+        All my effort worked! They said there were other people interested in you, but we got lucky with the week after your surgery, and they chose us to be your family. 
+        </p>
+      </div>
+
     </div> 
 </div>
