--- a/src/app/shay/shay.component.html
+++ b/src/app/shay/shay.component.html
@@ -9,11 +9,11 @@
       <div class="col-md-7"><i>"Though she be but little, she is fierce!" - Shakespeare</i></div><br>
       <div class="col-md-7">
         {{ shayInfo.name | titlecase }} Shaela AKA Shay <br><br>
-        {{ shayInfo.nicknames | titlecase }} Little Bitty, Honeybun, Sweetie Bear, My Bb, Big Eyes, Chonky Bb <br><br>
+        {{ shayInfo.nicknames | titlecase }} Little Bittle, Honeybun, Sweetie Bear, Bb, Big Eyes, Chonky Bb <br><br>
         {{ shayInfo.age | titlecase }} 8 years old <br><br>
         {{ shayInfo.gender | titlecase }} Female <br><br>
         {{ shayInfo.favs | titlecase }} Men, butter, shrimp, being warm, slow blinks/eye kisses (Google it), watching the toilet flush, hanging out and napping outside in her stroller, neck scratches, chasing shadows, flirting, grumbling <br><br>
-        {{ shayInfo.facts | titlecase }} Shay is magical. Her face is mostly eyes. She often makes a really cute noise called a trill. <br><br>
+        {{ shayInfo.facts | titlecase }} Shay is from Illinois. Her face is mostly eyes. She often makes a really cute noise called a trill. She is magical. <br><br>
       </div>
     </div> 
 </div>
