--- a/src/app/more-pets/more-pets.component.html
+++ b/src/app/more-pets/more-pets.component.html
@@ -1,23 +1,9 @@
 <div class="container-fluid">
     <div class="row">
-
-        <div class="col-md-6">
-            call fetchDoggoPic function
+        <div class="col-md-7">
+            <img [src]="doggo.message"/>
         </div>
-
-        <div class="col-md-6">
-            call fetchKittyPic function
-        </div>
-
+        <div class="col-md-7"><h3>Random doggo!</h3></div>
     </div>
     
 </div>
-
-<!-- <div class="container">
-    <div class="row">
-      <br>    
-      <div class="col-md-7">
-        <p>beachy works!</p>
-      </div>
-    </div> 
-</div> -->
