--- a/src/app/in-memoriam/in-memoriam.component.html
+++ b/src/app/in-memoriam/in-memoriam.component.html
@@ -10,7 +10,7 @@
         <h3>Tracee Viggo Strider - "Tater"</h3><br>
         <i>October 26th, 2001 - January 4th, 2021</i></div><br>
       <div class="col-md-7">
-        <p>I remember the day I met you. I was 10 years old. My mom and I had gone to the Petsmart in Bridgeton for tortoise food. 
+        <!-- <p>I remember the day I met you. I was 10 years old. My mom and I had gone to the Petsmart in Bridgeton for tortoise food. 
         This was still the old building, where the empty Lowes is now, laid out just like the St Charles Petsmart. The differences are minor, but I like to remember the details, 
         and when I go to the Petsmart in St Charles, it's like traveling back in time. <br>
         There were adoptable kittens near the adoption center. We decided to look. You were in a large cage, like for small animals, with other kittens. 
@@ -23,7 +23,7 @@
         mountain bikes, a Tracer - hence your name, "Tracee". We were also really into the Lord of the Ring movies as a family, so that's where 
         the rest of your name came from - Viggo Mortensen and his character Strider. You were already so unique and special. <br>
         All my effort worked! They said there were other people interested in you, but we got lucky with the week after your surgery, and they chose us to be your family. 
-        </p>
+        </p> -->
       </div>
 
     </div> 
