added button for refreshing random image

--- a/src/app/more-pets/more-pets.component.html
+++ b/src/app/more-pets/more-pets.component.html
@@ -1,9 +1,12 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-7">
-            <img [src]="doggo.message"/>
+            <img [src]="doggo.message"/><br>
         </div>
-        <div class="col-md-7"><h3>Random doggo!</h3></div>
+        <div class="col-md-7">
+            <br>
+            <button class="btn btn-primary" (click)="getPic()">Random Doggo!</button>
+        </div>
     </div>
     
 </div>
