added snakes file and created snakes component; updated header and routing

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,21 @@
                     <ul class="dropdown-menu">
                         <li><a routerLink="/shay">Shay</a></li>
                         <li><a routerLink="/beachy">Beachy</a></li>
-                        <li><a routerLink="/riku">Riku</a></li> <!-- FIX this dropdown! -->
+                        <li><a routerLink="/riku">Riku</a></li> 
+                    </ul>
+                </li>
+                <li class="dropdown" appDropdown>
+                    <a style="cursor: pointer;"
+                        class="dropdown-toggle" 
+                        role="button"
+                    >Snakes <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a routerLink="snakes/ari">Ari</a></li>
+                        <li><a routerLink="snakes/cookie">Cookie</a></li>
+                        <li><a routerLink="snakes/mykonos">Mykonos</a></li> 
+                        <li><a routerLink="snakes/aurelia">Aurelia</a></li>
+                        <li><a routerLink="snakes/devo">Devo</a></li>
+                        <li><a routerLink="snakes/saturn">Saturn</a></li> 
                     </ul>
                 </li>
                 <li routerLinkActive="active"><a routerLink="/in-memoriam">In Memoriam</a></li>
