updated snake components with text and images

--- a/src/app/snakes/cookie/cookie.component.html
+++ b/src/app/snakes/cookie/cookie.component.html
@@ -1,1 +1,17 @@
-<p>cookie works!</p>
+<div class="container-fluid">
+    <div class="row">   
+      <div class="col-md-7">
+        <img 
+            src="https://i.imgur.com/EenOtEhl.jpg" 
+            class="img-rounded img-responsive">
+      </div>
+      <div class="col-md-7"><h3>Cookie</h3></div><br>
+      <div class="col-md-7">
+        Age: 5 years old <br><br>
+        Gender: Female <br><br>
+        Species: Nelson's milksnake <br><br>
+        Color/morph: Albino <br><br>
+        Favorite things: eating, climbing, being cute <br><br>
+      </div>
+    </div> 
+</div>
