--- a/src/app/snakes/mykonos/mykonos.component.html
+++ b/src/app/snakes/mykonos/mykonos.component.html
@@ -1,1 +1,17 @@
-<p>mykonos works!</p>
+<div class="container-fluid">
+    <div class="row">   
+      <div class="col-md-7">
+        <img 
+            src="https://i.imgur.com/QUxxwNxl.jpg" 
+            class="img-rounded img-responsive">
+      </div>
+      <div class="col-md-7"><h3>Mykonos</h3></div><br>
+      <div class="col-md-7">
+        Age: 4 years old <br><br>
+        Gender: Male <br><br>
+        Species: Mexican black kingsnake <br><br>
+        Color/morph: N/A <br><br>
+        Favorite things: eating, expecting food all the time, having an attitude <br><br>
+      </div>
+    </div> 
+</div>
