--- a/src/app/snakes/saturn/saturn.component.html
+++ b/src/app/snakes/saturn/saturn.component.html
@@ -1,1 +1,18 @@
-<p>saturn works!</p>
+<div class="container-fluid">
+    <div class="row">   
+      <div class="col-md-7">
+        <img 
+            src="https://i.imgur.com/P3Dp97jl.jpg" 
+            class="img-rounded img-responsive">
+      </div>
+      <div class="col-md-7"><h3>Saturn</h3></div><br>
+      <div class="col-md-7">
+          <i>My dream snek!</i><br><br>
+        Age: 3 years old <br><br>
+        Gender: Male <br><br>
+        Species: Corn snake <br><br>
+        Color/morph: Palmetto <br><br>
+        Favorite things: watching Shelby while she's on her computer, eating <br><br>
+      </div>
+    </div> 
+</div>
