--- a/src/app/snakes/ari/ari.component.html
+++ b/src/app/snakes/ari/ari.component.html
@@ -1,1 +1,17 @@
-<p>ari works!</p>
+<div class="container-fluid">
+    <div class="row">   
+      <div class="col-md-7">
+        <img 
+            src="https://i.imgur.com/lL2Z2jNl.jpg" 
+            class="img-rounded img-responsive">
+      </div>
+      <div class="col-md-7"><h3>Ari</h3></div><br>
+      <div class="col-md-7">
+        Age: 17! years old <br><br>
+        Gender: Male <br><br>
+        Species: Corn snake <br><br>
+        Color/morph: Red motley <br><br>
+        Favorite things: eating, pooping, sleeping with his mouth open <br><br>
+      </div>
+    </div> 
+</div>
