--- a/src/app/snakes/aurelia/aurelia.component.html
+++ b/src/app/snakes/aurelia/aurelia.component.html
@@ -1,1 +1,18 @@
-<p>aurelia works!</p>
+<div class="container-fluid">
+    <div class="row">   
+      <div class="col-md-7">
+        <img 
+            src="https://i.imgur.com/13vrYtel.jpg" 
+            class="img-rounded img-responsive"
+            title="this is her baby picture :)">
+      </div>
+      <div class="col-md-7"><h3>Aurelia</h3></div><br>
+      <div class="col-md-7">
+        Age: 4 years old <br><br>
+        Gender: Female <br><br>
+        Species: Corn snake <br><br>
+        Color/morph: Anery tessera stripe <br><br>
+        Favorite things: eating, expecting food at all times, being super shy <br><br>
+      </div>
+    </div> 
+</div>
