--- a/src/app/snakes/devo/devo.component.html
+++ b/src/app/snakes/devo/devo.component.html
@@ -1,1 +1,17 @@
-<p>devo works!</p>
+<div class="container-fluid">
+    <div class="row">   
+      <div class="col-md-7">
+        <img 
+            src="https://i.imgur.com/o5KoumLl.jpg" 
+            class="img-rounded img-responsive">
+      </div>
+      <div class="col-md-7"><h3>Devo</h3></div><br>
+      <div class="col-md-7">
+        Age: 4 years old <br><br>
+        Gender: Male <br><br>
+        Species: Sonoran mountain kingsnake <br><br>
+        Color/morph: N/A <br><br>
+        Favorite things: eating, shedding, exploring <br><br>
+      </div>
+    </div> 
+</div>
