updated spec files with tests

--- a/src/app/riku/riku.component.html
+++ b/src/app/riku/riku.component.html
@@ -8,7 +8,7 @@
       <div class="col-md-7"><h3>Riku</h3></div><br>
       <div class="col-md-7">
         {{ rikuInfo.name | titlecase }} Riku <br><br>
-        {{ rikuInfo.nicknames | titlecase }} Monkey, Baby, Monkey Baby, Booger Baby, Booger Monster <br><br>
+        {{ rikuInfo.nicknames | titlecase }} Monkey, Baby, Monkey Baby, Booger Baby, Booger Monster, Eric <br><br>
         {{ rikuInfo.age | titlecase }} 5 years old <br><br>
         {{ rikuInfo.gender | titlecase }} Male <br><br>
         {{ rikuInfo.favs | titlecase }} His mommy Shelby (his "mams"), talking to his mams, sleeping face to face with his mams, snuggling his mams, holding hands with his mams, being mean to Shay, feuding with the squirrels in the yard, watching squirrels and birds outside in his stroller, being cute, manipulating you with cuteness, eating anything, being devious, stalking Shelby's pet snakes <br><br>
