--- a/src/app/snakes/ari/ari.component.html
+++ b/src/app/snakes/ari/ari.component.html
@@ -5,14 +5,14 @@
             src="https://i.imgur.com/lL2Z2jNl.jpg" 
             class="img-rounded img-responsive">
       </div>
-      <div class="col-md-7">
+      <!-- <div class="col-md-7">
         <br>
         <a style="cursor: pointer;"
             class="btn btn-primary" 
             role="button"
             routerLink="/cookie"> 
           -> </a>
-      </div>
+      </div> -->
       <div class="col-md-7"><h3>Ari</h3></div><br>
       <div class="col-md-7">
         Age: 17! years old <br><br>
