--- a/src/app/more-pets/more-pets.component.html
+++ b/src/app/more-pets/more-pets.component.html
@@ -1,12 +1,13 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-7">
-            <img [src]="doggo.message"/><br>
+            <img 
+             class="img-rounded img-responsive"
+             [src]="doggo.message"/><br>
         </div>
         <div class="col-md-7">
             <br>
             <button class="btn btn-primary" (click)="getPic()">Random Doggo!</button>
         </div>
     </div>
-    
 </div>
